# beeglacier

./: .gitignore  Pipfile  README.md  README.rst  pyproject.toml  requirements.txt
.github/: FUNDING.yml
src/beeglacier/: __main__.py  app.py  settings.py
src/beeglacier.dist-info/: METADATA
src/beeglacier/aws/: __init__.py
src/beeglacier/components/: base.py  form.py  table.py
src/beeglacier/db/: __init__.py
src/beeglacier/extra_impl/: OptionContainer.py
src/beeglacier/models/: __init__.py  accounts.py  deleted_archives.py  jobs.py  uploads.py  utils.py  vaults.py
src/beeglacier/resources/: beeglacier.icns
src/beeglacier/utils/: __init__.py  aws.py  strings.py  styles.py
